# tintr

./: .gitignore  CMakeLists.txt  README.md  build_and_run.bash  compile_commands.json
colorschemes/: gruvbox.yaml  onedark.yaml  tokyonight.yaml
include/: colorscheme.hpp  effects.hpp  formatConverter.hpp
src/: colorscheme.cpp  effects.cpp  formatConverter.cpp  main.cpp
